fix button background color on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,7 @@ button:focus {
 }
 
 .topic {
+    background-color: #fff;
     border: 2px solid rgba(14, 209, 40, 0.55);
     padding: 8px;
     letter-spacing: 0.7px;
